[package]
name = "example-hello-world"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { path = "../../axum" }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.0", features=['fs', 'compression-full'] }
mime_guess = "2.0.4"
matchit = "0.7.3"
anyhow = "1.0.69"