[package]
name = "example-reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { path = "../../axum" }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix = "0.13.1"
actix-rt = "2.9.0"
anyhow = "1.0.69"
futures = "0.3.30"
notify = { version = "6.1.1" }
matchit = { version = "0.7.3" }