[package]
name = "example-reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { path = "../../axum" }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.0", features = ['trace', 'fs', 'compression-full', 'catch-panic', 'cors'] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix = "0.13.1"
actix-rt = "2.9.0"
anyhow = "1.0.69"
futures = "0.3.30"
notify = { version = "6.1.1" }
matchit = { version = "0.7.3" }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.30"
thiserror = "1.0.38"
mime_guess = "2.0.4"
serde_json = "1.0.93"
toml = "0.8.8"
bytes = "1.4.0"